web-app/css/public.css
.sidebar p {
    font-size: 0.9em;
    line-height: normal;
    padding-bottom: 4px ! important;
    color: #555 ! important;
}

.sidebar p.caption {
    color: #666 ! important;
    font-size: 0.9em;
    line-height: normal;
    padding-bottom: 4px ! important;
}

.sidebar h4 {
    color: #7D8804;
}

.sidebar a {
    font-size: 1em;
}

span.acronym {
    color:#555;
    padding-right:10px;
}

span.lsid {
    font-size:12px;
}

div.center {
    text-align:center !important;
}

a.current {
    text-decoration: none;
    color: #333;
    cursor: default;
    background-image:none !important;
}

.institutionImage {
    max-width:300px;
    -moz-border-radius: 0 !important; /* FF1+ */
    -webkit-border-radius: 0 !important; /* Saf3+, Chrome */
    border-radius: 0 !important; /* Opera 10.5, IE 9 */
    padding-bottom: 5px;
}

/* allow logo to rise to level of name text */
#header .aside {
    padding-top: 0;
}

/********************************\
* Styling for map pop-up
\********************************/
/* eliminate excess space below list in map popups */
.olFramedCloudPopupContent ul {
    padding-bottom: 0;
}

/* default charcoal text for collections */
.olFramedCloudPopupContent a {
    color: #333;
}

/* indent inner list items in popups */
.olFramedCloudPopupContent ul ul li a {
    margin-left: 20px;
}

/* header colour for institutions */
.olFramedCloudPopupContent a.highlight {
    color: #718804;
}

/* colour for other text */
.olFramedCloudPopupContent span {
    color: #333;
}

/* hr in popups */
.olFramedCloudPopupContent hr {
    height: 0;
    margin-bottom: 0 !important;
    background-color: transparent;
}

/*div#featurePopup_contentDiv {
    padding-right: 0;
    padding-bottom: 0;
}*/

.olFramedCloudPopupContent div.address {
    color: #555;
    margin-left: 6px;
    font-size: smaller;
    font-style: italic;
}

.olFramedCloudPopupContent div.desc {
    color: #333;
    margin-left: 6px;
    font-size: smaller;
    margin-top: 0;
}

/* control space in map hover */
ul.hoverPop {
    font-size: smaller;
}

/* prevent excess space after % records widget caption */
#content .section p.caption {
    padding-bottom: 0;
}

/* images for taxa breakdown
ul.taxaBreakdown li {
    height: 35px;
}*/

ul.taxaBreakdown input {
    margin-top: 11px;
}

#map-collections p {
    margin-top: 20px;
}

#map-collections {
    padding-left: 15px;
}

/*#fishBreakdown { background:url("../images/taxa/pisces.gif")  no-repeat; padding-left:40px; background-position: left;}
#birdsBreakdown { background:url("../images/taxa/aves.png") no-repeat; padding-left:40px; background-position: left;}
#frogsBreakdown { background:url("../images/taxa/amphibia.png") no-repeat; padding-left:40px; background-position: left;}
#reptilesBreakdown { background:url("../images/taxa/reptilia.png") no-repeat ; padding-left:40px; background-position: left;}
#mammalsBreakdown { background:url("../images/taxa/mammalia.png") no-repeat; padding-left:40px; background-position: left;}
#invertsBreakdown { background:url("../images/taxa/arthropoda.png") no-repeat; padding-left:40px; background-position: left;}
#plantsBreakdown { background:url("../images/taxa/flower.png") no-repeat; padding-left:40px; background-position: left;}
#fernsBreakdown { background:url("../images/taxa/fern.png") no-repeat; padding-left:40px; background-position: left;}
#fungiBreakdown { background:url("../images/taxa/fungi.png") no-repeat; padding-left:40px; background-position: left;}
#microbesBreakdown { background:url("../images/taxa/microbe.png") no-repeat; padding-left:40px; background-position: left;}*/

.olControlPanel {
    position:relative;
    top:130px;
    left: 7px;
    display:block;
    width:  24px;
    height: 24px;
    margin: 5px;
/*    background-color:red;*/
}

.olControlPanel .resetZoomItemActive {
    width:  22px;
    height: 22px;
    background-image: url("../images/map/australia.png");
}

/* error messages*/
/* for "not found" messages in public pages */
.message {
    background: #f3f8fc url(../images/skin/information.png) 8px 50% no-repeat;
    border: 1px solid #b2d1ff;
    color: #006dba;
    margin: 10px 0 5px 0;
    padding: 5px 5px 5px 30px
}

div.distributionImage {
    margin-left: 10px;
}

#statistics div.distributionImage {
    z-index: 2000;
    display: inline;
}

#statistics div.distributionImage img {
    z-index: 2000;
    vertical-align: top;
}

#statistics div.distributionImage img#recordsMap {
    margin-top: 10px;
}

#statistics div.distributionImage img#mapLegend {
    margin-top: 50px;
    position: relative;
    z-index: 4;
}

div.vertical-charts {
    height: auto !important;
}

.vertical-charts div.distributionImage img {
    position: relative;
    z-index: 4;
    vertical-align: middle;
    margin-left: 35px;
}

#taxonChart iFrame {
    margin-top: -60px;
    margin-left: -15px;
    position: relative;
    z-index: 0;
}

.vertical-charts #taxonChart iFrame {
    margin-top: -20px;
    position: relative;
    z-index: 0;
}

#speedo {
    float:right;
    text-align:center;
    padding-right:130px;
    /*margin-top:-40px;*/
}

#speedoCaption {
    position: relative;
    z-index: 2;
}

a.recordsLink {
    position: relative;
    z-index: 2;
}

div.inline {
    display: inline;
}

div.contact {
    padding-bottom: 5px;
}

p.contactName {
    font-weight: bold;
}

p.lastUpdated {
    font-size: 11px;
    color: #666 !important;
    margin-left: 15px;
    padding-bottom: 0 !important;
}

/* painful positioning of chart label because of the dynamic generation of the div content and IE bugs */
/* all */
span.taxonChartCaption {
    color: #555;
}

span#resetTaxonChart {
    color: #01716E;
    text-decoration:underline;
    cursor:pointer;
}

/* 1 column */
div#taxonChartCaption {
    text-align:center;
    width: 200px;
    position:relative;
    top:-120px;
    left: 260px;
}

div#decadeChart {
    position: relative;
    margin-top: -100px;
    z-index: 20;
}

div#decadeChartCaption {
    margin-top: -10px;
    padding-left: 100px;
    padding-bottom: 20px;
    color: #555;
    position: relative;
    z-index: 22;
}

/* 2 column */
#statistics span.taxonChartCaption {
    color: #555;
}

#statistics span#resetTaxonChart {
    color: #01716E;
    text-decoration:underline;
    cursor:pointer;
}

#statistics div#taxonChartCaption {
    left: 685px;    
}

#statistics div#decadeChart {
    margin-top: -150px;
}

/* ------------*/

/*a[target='_blank'] {
    background: url(../images/skin/external.png) center right no-repeat;
    padding-right: 13px;
}*/

img.no-radius {
    -moz-border-radius: 0 !important; /* FF1+ */
    -webkit-border-radius: 0 !important; /* Saf3+, Chrome */
    border-radius: 0 !important; /* Opera 10.5, IE 9 */
}

/* stop rounding of map tiles */
.olMap img {
    -moz-border-radius: 0 !important; /* FF1+ */
    -webkit-border-radius: 0 !important; /* Saf3+, Chrome */
    border-radius: 0 !important; /* Opera 10.5, IE 9 */
}
/* for percent records progress bar */

img.percentImage1 {
 background: white url(../images/percentImage_back1.png) top left no-repeat;
 padding: 0;
 margin: 5px 0 10px 0;
 background-position: 1px 0;
}

img.percentImage2 {
 background: white url(../images/percentImage_back2.png) top left no-repeat;
 padding: 0;
 margin: 5px 0 0 0;
 background-position: 1px 0;
}

img.percentImage3 {
 background: white url(../images/percentImage_back3.png) top left no-repeat;
 padding: 0;
 margin: 5px 0 0 0;
 background-position: 1px 0;
}

img.percentImage4 {
 background: white url(../images/percentImage_back4.png) top left no-repeat;
 padding: 0;
 margin: 5px 0 0 0;
 background-position: 1px 0;
}

